chore: Update generated docs headers

--- a/resources/templates/README.mustache
+++ b/resources/templates/README.mustache
@@ -29,7 +29,7 @@ Please review that repository for setup information.
 ## Installation
 
 ```shell
-gem '{{{gemName}}}', '~> {{{gemVersion}}}'
+gem 'clerk-sdk-ruby', '~> 4.0', require: 'clerk'
 ```
 
 ## Generate a client
