--- a/resources/templates/api_doc.mustache
+++ b/resources/templates/api_doc.mustache
@@ -1,4 +1,4 @@
-# {{moduleName}}::{{classname}}{{#description}}
+# {{{sdk_module_prefix}}}.{{#snakecase}}{{#remove_api_suffix}}{{classname}}{{/remove_api_suffix}}{{/snakecase}}{{#description}}
 
 {{.}}{{/description}}
 
